# shadow-code

./: .claudeignore  .gitignore  .pre-commit-config.yaml  CHALLENGE.md  CLAUDE.md  Modelfile  Modelfile.qwen  PLAN_FINAL.md  PLAN_v2.md  README.md  README.qwen.md  WORKFLOW.md  phase0_validate.py  phase5_e2e.py  pyproject.toml
.claude/agents/: security-review.md
.claude/commands/: context-budget.md  verify.md
.claude/skills/: shadow-code-debug.md  shadow-code-patterns.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ARCHITECTURE_UPGRADE.md  CHALLENGE.md  PLAN.md  PLAN_FINAL.md  ROLE.md  VALIDATION_RESULTS.md  VECMEM_ANALYSIS.md  VRAM.md
shadow_code/: __init__.py  compaction.py  config.py  conversation.py  db.py  display.py  main.py  ollama_client.py  parser.py  prompt.py  repl.py  rules_loader.py  safety.py  skills.py  status_bar.py  streaming.py  theme.py  tool_context.py  ui.py
shadow_code.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
shadow_code/tools/: __init__.py  base.py  bash.py  edit_file.py  file_backup.py  get_language_rules.py  glob_tool.py  grep_tool.py  list_dir.py  multi_read.py  project_summary.py  read_file.py  write_file.py
tests/: test_compaction.py  test_db.py  test_display.py  test_integration.py  test_main_helpers.py  test_parser.py  test_prompt.py  test_repl.py  test_safety.py  test_skills.py  test_streaming.py  test_tools.py  test_ui.py
