[project]
name = "shadow-code"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["requests>=2.31.0"]

[project.optional-dependencies]
full = ["rich>=13.0.0", "prompt_toolkit>=3.0.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "bandit>=1.7",
    "pre-commit>=3.7",
    "types-requests>=2.31",
]

[project.scripts]
shadow-code = "shadow_code.main:main"

# -- Tool Configuration --

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "S"]
ignore = [
    "S602",   # subprocess shell=True -- intentional for bash tool
    "S603",   # subprocess without shell -- intentional for grep tool
    "S404",   # subprocess import -- required for tool functionality
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S108", "SIM115"]  # assert + /tmp + NamedTemporaryFile fine in tests
"shadow_code/prompt.py" = ["E501"]  # system prompt is a long static string, line length N/A

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
warn_return_any = true
warn_unused_configs = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B404"]

[tool.coverage.run]
source = ["shadow_code"]
omit = ["shadow_code/__pycache__/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "except ImportError",
    "def main\\(",
]
